# test

./: Dockerfile  Dockerfile.base  docker.bat  hrnet.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
config/: hrnet_config.yaml
config/model/: hrnet18_config.yaml  hrnet_base_config.yaml
core/: OnnxPlugin.pro  onnxinterface.h.txt  onnxplugin.cpp.txt  onnxplugin.h.txt
models/: hrnet.py  neuronnet.py
testcases/: test_hrnet.py  test_neuronnet.py
tools/: train.py
