[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
scipy = "*"
matplotlib = "*"
pandas = "*"
scikit-learn = "*"
jupyterlab = "*"
rich = "*"
omegaconf = "*"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "*"