[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["jungle <errorworld123@163.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
scipy = "*"
matplotlib = "*"
pandas = "*"
scikit-learn = "*"
jupyterlab = "*"
rich = "*"
omegaconf = "*"
click = "*"

[tool.poetry.dev-dependencies]
pytest = "*"